<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cc_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_bg"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:paddingBottom="@dimen/margin_large"
        >

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:alpha="1"
            android:contentDescription="@string/AppLogo"
            android:src="@drawable/ic_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="Test"
            app:layout_constraintBottom_toBottomOf="@id/app_logo"
            app:layout_constraintLeft_toRightOf="@id/app_logo"
            app:layout_constraintTop_toTopOf="@id/app_logo"
            style="@style/RegularText2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/no_group_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cc_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/RegularText2"
            android:lineSpacingMultiplier="1.2"
            android:lineSpacingExtra="2dp"
            android:text="@string/no_data_available"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:gravity="center"
            android:visibility="gone"
            />

        <ListView
            android:id="@+id/group_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_large"
            android:divider="@color/background"
            android:dividerHeight="@dimen/margin_small"
            android:paddingStart="@dimen/text_small"
            android:paddingEnd="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/no_group_info" />

        <Button
            android:id="@+id/tracking_btn"
            style="@style/Widget.App.AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:text="@string/start_tracking"
            app:layout_constraintTop_toBottomOf="@id/group_list"
            tools:layout_editor_absoluteX="24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tracking_btn" >

            <TextView
                android:id="@+id/mode_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/mode_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_label" />

            <TextView
                android:id="@+id/sync_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sync_status"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode" />

            <TextView
                android:id="@+id/sync_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="-"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sync_label"
                tools:ignore="HardcodedText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/data_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sync_result" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>